@@ -32,6 +32,7 @@
 
 #include <mpd/output.h>
 #include <mpd/pair.h>
+#include "kvlist.h"
 
 #include <assert.h>
 #include <string.h>
@@ -41,6 +42,9 @@ struct mpd_output {
 	unsigned id;
 	char *name;
 	char *plugin;
+
+	struct mpd_kvlist attributes;
+
 	bool enabled;
 };
 
@@ -62,6 +66,7 @@ mpd_output_begin(const struct mpd_pair *pair)
 
 	output->name = NULL;
 	output->plugin = NULL;
+	mpd_kvlist_init(&output->attributes);
 	output->enabled = false;
 
 	return output;
@@ -81,6 +86,12 @@ mpd_output_feed(struct mpd_output *output, const struct mpd_pair *pair)
 	else if (strcmp(pair->name, "plugin") == 0) {
 		free(output->plugin);
 		output->plugin = strdup(pair->value);
+	} else if (strcmp(pair->name, "attribute") == 0) {
+		const char *eq = strchr(pair->value, '=');
+		if (eq != NULL && eq > pair->value)
+			mpd_kvlist_add(&output->attributes,
+				       pair->value, eq - pair->value,
+				       eq + 1);
 	}
 
 	return true;
@@ -93,6 +104,7 @@ mpd_output_free(struct mpd_output *output)
 
 	free(output->name);
 	free(output->plugin);
+	mpd_kvlist_deinit(&output->attributes);
 	free(output);
 }
 
@@ -126,4 +138,20 @@ mpd_output_get_enabled(const struct mpd_output *output)
 	assert(output != NULL);
 
 	return output->enabled;
+}
+
+const struct mpd_pair *
+mpd_output_first_attribute(struct mpd_output *output)
+{
+	assert(output != NULL);
+
+	return mpd_kvlist_first(&output->attributes);
+}
+
+const struct mpd_pair *
+mpd_output_next_attribute(struct mpd_output *output)
+{
+	assert(output != NULL);
+
+	return mpd_kvlist_next(&output->attributes);
 }
